# hsmm-state-detection

./: README.md  bindings.cpp  duration_distributions.cpp  em_engine.cpp  particle_filter.cpp
cpp/include/hsmm/: duration_distributions.hpp  em_engine.hpp  emissions.hpp  forward_backward.hpp  particle_filter.hpp  types.hpp
cpp/src/: emissions.cpp  forward_backward.cpp
cpp/tests/: test_forward_backward.cpp  test_particle_filter.cpp
docs/: CMakeLists.txt  environment.yml  pyproject.toml
python/hsmm_regime/: __init__.py  data.py  gibbs.py  ms_var.py  plotting.py  strategy.py
python/hsmm_regime/tests/: test_backtest.py  test_bayesian_extensions.py
python/scripts/: backtest_strategy.py  build_features.py  fetch_data.py  fit_gibbs_hsmm.py  fit_ms_var.py  fit_offline_hsmm.py  run_online_filter.py
